--- a/fajny_folder/main.html
+++ b/fajny_folder/main.html
@@ -15,7 +15,9 @@
     <div id="div1">
         <p id="pnagl">Na początku:</p>
         <p id="pnorm">Stworzyłem 2 pliki <code>.html</code> i <code>.css</code> po czym dodam je zaraz na repozytorium w commit o nazwie "nowa strona" w main branch.</p>
-        <p id="pnorm"></p>
+        <p id="pnagl">Następnie:</p>
+        <p id="pnorm">Dodam teraz update z tekstem, który po kliknięciu będzie przekierowywał do nowej strony nr 2.</p>
+        <a href="strona2.html">Przejdź do strony 2.</a>
     </div>
 </body>
 </html>
