--- a/fajny_folder/main.html
+++ b/fajny_folder/main.html
@@ -18,6 +18,8 @@
         <p id="pnagl">Następnie:</p>
         <p id="pnorm">Dodam teraz update z tekstem, który po kliknięciu będzie przekierowywał do nowej strony nr 2.</p>
         <a href="strona2.html">Przejdź do strony 2.</a>
+        <p id="pnagl">Kolejne kroki:</p>
+        <p id="pnorm">Na stronie nr 2 dodam w dwóch kolejnych commit'ach rzeczy, które później cofnę do stanu z obecnego commit'a.</p>
     </div>
 </body>
 </html>
