--- a/fajny_folder/strona2.html
+++ b/fajny_folder/strona2.html
@@ -14,6 +14,7 @@
     </header>
     <div id="div1">
         <p id="pnagl">Oto nowa strona.</p>
+        <p id="pnagl">Punkt odniesienia.</p>
     </div>
 </body>
 </html>
