--- a/fajny_folder/strona2.html
+++ b/fajny_folder/strona2.html
@@ -15,6 +15,7 @@
     <div id="div1">
         <p id="pnagl">Oto nowa strona.</p>
         <p id="pnagl">Punkt odniesienia.</p>
+        <p id="pnorm">Rzecz do usunięcia nr 1.</p>
     </div>
 </body>
 </html>
