--- a/fajny_folder/strona2.html
+++ b/fajny_folder/strona2.html
@@ -16,6 +16,7 @@
         <p id="pnagl">Oto nowa strona.</p>
         <p id="pnagl">Punkt odniesienia.</p>
         <p id="pnorm">Rzecz do usunięcia nr 1.</p>
+        <p id="pnorm">Rzecz do usunięcia nr 2.</p>
     </div>
 </body>
 </html>
