--- a/fajny_folder/main.html
+++ b/fajny_folder/main.html
@@ -20,6 +20,9 @@
         <a href="strona2.html">Przejdź do strony 2.</a>
         <p id="pnagl">Kolejne kroki:</p>
         <p id="pnorm">Na stronie nr 2 dodam w dwóch kolejnych commit'ach rzeczy, które później cofnę do stanu z obecnego commit'a.</p>
+        <p id="pnagl">Wszystkie operacje wykonałem poprzez aplikację GitHub Desktop.</p>
+        <p id="pnorm">Link do repo na GitHub: <code>https://github.com/jjaskiewicz02/lab2</code></p>
+        <a href="strona3.html">Strona ze zrzutami z aplikacji.</a>
     </div>
 </body>
 </html>
